--- a/new_assembly/index.html
+++ b/new_assembly/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/build/css/modern-normalize.min.css">
     <link rel="stylesheet" href="/build/css/style.min.css">
-    <title>Document</title>
+    <title>Sony</title>
     <link rel="shortcut icon" href="/dev/img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   </head>
   <body> 
     <header class="header" id="header"> 
-      <nav class="nav container"> <a class="nav__logo" href="#"><img src="/dev/img/logo.png" alt="logo"></a>
+      <nav class="nav container"> <a class="nav__logo" href="#"><img src="/dev/img/sony_logo.png" alt="logo"></a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list"> 
-            <li class="nav__item"> <a class="active-link nav__link" href="#home">Home</a></li>
-            <li class="nav__item"> <a class="nav__link" href="#specs">Specs</a></li>
-            <li class="nav__item"> <a class="nav__link" href="#case">Case</a></li>
-            <li class="nav__item"> <a class="nav__link" href="#products">Products</a></li>
+            <li class="nav__item"> <a class="active-link nav__link" href="#home">Главная</a></li>
+            <li class="nav__item"> <a class="nav__link" href="#specs">Характеристики</a></li>
+            <li class="nav__item"> <a class="nav__link" href="#case">Чехол</a></li>
+            <li class="nav__item"> <a class="nav__link" href="#products">Продукты</a></li>
           </ul>
           <div class="nav__close" id="nav-close"><i class="ri-close-line"></i></div>
         </div>
@@ -28,127 +28,133 @@
     <main class="main"> 
       <section class="home section" id="home"> 
         <div class="home__container container grid">
-          <div class="div"><img class="home__img" src="/dev/img/home.png" alt="headset"></div>
+          <div class="div"><img class="home__img" src="/dev/img/sony_home.png" alt="headset"></div>
           <div class="home__data"> 
             <div class="home__header">
-              <h1 class="home__title">On ear</h1>
-              <h2 class="home__subtitle">Beats 3</h2>
+              <h1 class="home__title">Лучшие</h1>
+              <h2 class="home__subtitle">Sony WH-1000XM4</h2>
             </div>
             <div class="home__footer">
-              <h3 class="home__title-description">Overview</h3>
-              <p class="home__description">Enjoy award-winning Beats sound with listening freedom and a sleek, streaming design with comfortable padded earphones, delivering first-rate playback.</p><a class="button button--flex" href="#"><span class="button--flex"><i class="ri-shopping-bag-line button__icon"></i> Add to Bag</span><span class="home__price">$299</span></a>
+              <h3 class="home__title-description">Описание</h3>
+              <p class="home__description">Наслаждайтесь отмеченным наградами звуком Beats со свободой прослушивания и элегантным дизайном для потоковой передачи с удобными наушниками с мягкой подкладкой, обеспечивающими первоклассное воспроизведение.</p><a class="button button--flex" href="#"><span class="button--flex"><i class="ri-shopping-bag-line button__icon"></i> Добавить в корзину</span><span class="home__price">$299</span></a>
             </div>
           </div>
         </div>
       </section>
       <section class="sponsor section"> 
-        <div class="sponsor__container container grid"> <img class="sponsor__img" src="/dev/img/sponsor1.png" alt="sponsor"><img class="sponsor__img" src="/dev/img/sponsor2.png" alt="sponsor"><img class="sponsor__img" src="/dev/img/sponsor3.png" alt="sponsor"><img class="sponsor__img" src="/dev/img/sponsor4.png" alt="sponsor"></div>
+        <div class="sponsor__container container grid"> <img class="sponsor__img" src="/dev/img/sponsor2.png" alt="sponsor"><img class="sponsor__img" src="/dev/img/sponsor1.png" alt="sponsor"><img class="sponsor__img" src="/dev/img/sponsor4.png" alt="sponsor"><img class="sponsor__img" src="/dev/img/sponsor3.png" alt="sponsor"></div>
       </section>
       <section class="specs section grid" id="specs"> 
-        <h2 class="section__title section__title-gradient">Specs</h2>
+        <h2 class="section__title section__title-gradient">Характеристики</h2>
         <div class="specs__container container grid"> 
           <div class="specs__content grid"> 
             <div class="specs__data">
                <i class="ri-bluetooth-line specs__icon"></i>
-              <h3 class="specs__title">Connection </h3><span class="specs__subtitles">Bluetooth v5.2 </span>
+              <h3 class="specs__title">Соединение</h3><span class="specs__subtitles">Bluetooth v5.2 </span>
             </div>
             <div class="specs__data">
                <i class="ri-battery-charge-line specs__icon"></i>
-              <h3 class="specs__title">Battery</h3><span class="specs__subtitles">Duration 40h</span>
+              <h3 class="specs__title">Батарея</h3><span class="specs__subtitles">Держит 40 часов</span>
             </div>
             <div class="specs__data">
                <i class="ri-plug-line specs__icon"></i>
-              <h3 class="specs__title">Load</h3><span class="specs__subtitles">Fast charge 4.2-AAC </span>
+              <h3 class="specs__title">Заряд</h3><span class="specs__subtitles">Быстрая Зарядка 4.2-AAC </span>
             </div>
             <div class="specs__data">
                <i class="ri-mic-line specs__icon"></i>
-              <h3 class="specs__title">Microphone</h3><span class="specs__subtitles">Supports Apple Siri <br> and Google</span>
+              <h3 class="specs__title">Микрофон</h3><span class="specs__subtitles">Поддерживает Apple Siri <br> И Google</span>
             </div>
           </div>
-          <div class="div"><img class="specs__img" src="/dev/img/specs.png" alt="specs"></div>
+          <div class="div"><img class="specs__img" src="/dev/img/sony_specs.png" alt="specs"></div>
         </div>
       </section>
       <section class="specs section grid" id="case"> 
-        <h2 class="section__title section__title-gradient">Case</h2>
+        <h2 class="section__title section__title-gradient">Чехол</h2>
         <div class="case__container container grid"> 
-          <div class="div"> <img class="case__img" src="/dev/img/case.png" alt="case"></div>
+          <div class="div"> <img class="case__img" src="/dev/img/sony_case.png" alt="case"></div>
           <div class="case__data">
-            <p class="case__description">With a comfortable and adaptable case so that you can store it whenever you want , and keep your durability forever.</p><a class="button button--flex" href="#"><i class="ri-information-line button__icon"></i> More info</a>
+            <p class="case__description">В удобном и адаптируемом футляре, чтобы вы могли хранить его, когда захотите, и сохраните свою долговечность навсегда.</p><a class="button button--flex" href="#"><i class="ri-information-line button__icon"></i> Больше информации</a>
           </div>
         </div>
       </section>
       <section class="discaunt section"> 
         <div class="discount__container container grid"> 
           <div class="discount__animate"> 
-            <h2 class="discount__title">Immese yourself if <br> your music</h2>
-            <p class="discount__description">Get it now , up to 50% off.</p><a class="button button--flex"><i class="ri-shopping-bag-line button__icon"></i> Shop Now</a>
-          </div><img class="discount__img" src="/dev/img/discount.png" alt="discount">
+            <h2 class="discount__title">Погрузитесь, в невероятный <br> звук </h2>
+            <p class="discount__description">Получите сейчас со <br>  скидкой до 50%.</p><a class="button button--flex"><i class="ri-shopping-bag-line button__icon"></i> Shop Now</a>
+          </div><img class="discount__img" src="/dev/img/sony_discount.png" alt="discount">
         </div>
       </section>
       <section class="products section" id="products">
-        <h2 class="section__title section__title-gradient products__line">Choose <br> Your Style</h2>
+        <h2 class="section__title section__title-gradient products__line">Выберите ваш <br> любимый цвет</h2>
         <div class="products__container container grid"> 
           <article class="products__card"> 
-            <div class="products__content"> <img class="products__img" src="/dev/img/product1.png" alt="products">
-              <h3 class="products__title">Black </h3><span class="products__price">$249</span>
+            <div class="products__content"> <img class="products__img" src="/dev/img/sony_product_1.png" alt="products">
+              <h3 class="products__title">Чёрный</h3><span class="products__price">$249</span>
               <button class="button button--flex products__button"><i class="ri-shopping-bag-line"></i></button>
             </div>
           </article>
           <article class="products__card"> 
-            <div class="products__content"> <img class="products__img" src="/dev/img/product2.png" alt="products">
-              <h3 class="products__title">Red Black</h3><span class="products__price">$249</span>
+            <div class="products__content"> <img class="products__img" src="/dev/img/sony_product_6.png" alt="products">
+              <h3 class="products__title">Голубой</h3><span class="products__price">$249</span>
               <button class="button button--flex products__button"><i class="ri-shopping-bag-line"></i></button>
             </div>
           </article>
           <article class="products__card"> 
-            <div class="products__content"> <img class="products__img" src="/dev/img/product3.png" alt="products">
-              <h3 class="products__title">Night Black </h3><span class="products__price">$249</span>
+            <div class="products__content"> <img class="products__img" src="/dev/img/sony_product_4.png" alt="products">
+              <h3 class="products__title">Розовый</h3><span class="products__price">$249</span>
               <button class="button button--flex products__button"><i class="ri-shopping-bag-line"></i></button>
             </div>
           </article>
           <article class="products__card"> 
-            <div class="products__content"> <img class="products__img" src="/dev/img/product4.png" alt="products">
-              <h3 class="products__title">Blue </h3><span class="products__price">$249</span>
+            <div class="products__content"> <img class="products__img" src="/dev/img/sony_product_3.png" alt="products">
+              <h3 class="products__title">Фиолетовый</h3><span class="products__price">$249</span>
               <button class="button button--flex products__button"><i class="ri-shopping-bag-line"></i></button>
             </div>
           </article>
           <article class="products__card"> 
-            <div class="products__content"> <img class="products__img" src="/dev/img/product5.png" alt="products">
-              <h3 class="products__title">Twilight gray</h3><span class="products__price">$249</span>
+            <div class="products__content"> <img class="products__img" src="/dev/img/sony_product_5.png" alt="products">
+              <h3 class="products__title">Золотой</h3><span class="products__price">$249</span>
+              <button class="button button--flex products__button"><i class="ri-shopping-bag-line"></i></button>
+            </div>
+          </article>
+          <article class="products__card"> 
+            <div class="products__content"> <img class="products__img" src="/dev/img/sony_product_2.png" alt="products">
+              <h3 class="products__title">Белый</h3><span class="products__price">$249</span>
               <button class="button button--flex products__button"><i class="ri-shopping-bag-line"></i></button>
             </div>
           </article>
         </div>
       </section>
       <footer class="footer section"> 
-        <div class="footer__container container grid"><a class="footer__logo" href="#"><img src="/dev/img/logo.png" alt="logo"></a>
+        <div class="footer__container container grid"><a class="footer__logo" href="#"><img src="/dev/img/sony_logo.png" alt="logo"></a>
           <div class="footer__content"> 
-            <h3 class="footer__title">Products </h3>
+            <h3 class="footer__title">Наши продукты</h3>
             <ul class="footer__links"> 
-              <li><a class="footer__link" href="#">Headphones</a></li>
-              <li><a class="footer__link" href="#">Earphones </a></li>
-              <li><a class="footer__link" href="#">Earbuds</a></li>
-              <li><a class="footer__link" href="#">Accesories </a></li>
+              <li><a class="footer__link" href="#">Полноразмерные наушники</a></li>
+              <li><a class="footer__link" href="#">Вкладыши </a></li>
+              <li><a class="footer__link" href="#">Затычки</a></li>
+              <li><a class="footer__link" href="#">Аксессуары</a></li>
             </ul>
           </div>
           <div class="footer__content"> 
-            <h3 class="footer__title">Support</h3>
+            <h3 class="footer__title">Поддержка</h3>
             <ul class="footer__links"> 
-              <li><a class="footer__link" href="#">Product help</a></li>
-              <li><a class="footer__link" href="#">Register </a></li>
-              <li><a class="footer__link" href="#">Updates</a></li>
-              <li><a class="footer__link" href="#">Provides </a></li>
+              <li><a class="footer__link" href="#">Помощь</a></li>
+              <li><a class="footer__link" href="#">Регистр </a></li>
+              <li><a class="footer__link" href="#">Обновления</a></li>
+              <li><a class="footer__link" href="#">Обеспечивания</a></li>
             </ul>
           </div>
           <div class="footer__content"> 
             <form class="footer__form" action=""> 
               <input class="footer__input" placeholder="Email" type="email">
-              <button class="button button--flex"><i class="ri-mail-send-line button__icon"> Subscribe </i> </button>
+              <button class="button button--flex"><i class="ri-mail-send-line button__icon"></i> Подпишитесь</button>
             </form>
             <div class="footer__social"><a class="footer__social-link" target="_blank" href="https://www.facebook.com/"><i class="ri-facebook-fill"></i></a><a class="footer__social-link" target="_blank" href="https://www.instagram.com/"><i class="ri-instagram-line"></i></a><a class="footer__social-link" target="_blank" href="https://www.twitter.com/"><i class="ri-twitter-line"></i></a></div>
           </div>
         </div>
-        <p class="footer__copy"> <a class="footer__copy-link" target="_blank" href="https://www.youtube.com/">&#169; Bose. All right reserved.</a></p>
+        <p class="footer__copy"> <a class="footer__copy-link" target="_blank" href="https://www.youtube.com/">&#169; Sony. Все права защищены.</a></p>
       </footer><a class="scrollup" href="#" id="scroll-up"><i class="ri-arrow-up-s-line scrollup__icon"></i></a>
     </main>
     <script defer src="/dev/js/scrollreveal.min.js"></script>
